--- a/themes/ananke/layouts/_default/baseof.html
+++ b/themes/ananke/layouts/_default/baseof.html
@@ -57,10 +57,15 @@
   {{- $environment := hugo.Environment | default "production" -}}
   <body class="ma0 {{ $.Param "body_classes"  | default "avenir bg-near-white"}} {{ $environment }}">
 
+
     {{ block "header" . }}{{ partial "site-header.html" .}}{{ end }}
     <main class="pb7" role="main">
       {{ block "main" . }}{{ end }}
     </main>
     {{ block "footer" . }}{{ partialCached "site-footer.html" . }}{{ end }}
+
+    {{/*  anime.js files  */}}
+    <script src="/js/anime.min.js"></script>
+    <script src="/js/test_anime.js"></script>
   </body>
 </html>
