custom.css to .scss (for live reload)

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -14,3 +14,14 @@ blockquote {
 	border-left: 10px solid var(--hover-color);
 	padding-left: 10px;
 }
+
+
+#szk_pfp {
+	/* height: 100px; */
+	// height: 30vh;
+	height: 30vh;
+	/* height: 130vh; */
+	/* border-radius: 50%; */
+	padding-left: 100px;
+	/* background-color: red; */
+}
