custom home page with profile_resume

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,4 +1,5 @@
 {{ define "main" }}
+{{/*  TODO home.html  */}}
   {{ partial "title.html" . }}
   {{ partial "profile_resume.html" . }}
   {{ partial "categories.html" }}
