dont show tittle.html in home.html

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -1,6 +1,6 @@
 {{ define "main" }}
 {{/*  TODO home.html  */}}
-  {{ partial "title.html" . }}
+  {{/*  {{ partial "title.html" . }}  */}}
   {{ partial "profile_resume.html" . }}
   {{ partial "categories.html" }}
   {{ partial "featured.html" . }}
