--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -21,7 +21,7 @@ blockquote {
 	// height: 30vh;
 	height: 30vh;
 	/* height: 130vh; */
-	/* border-radius: 50%; */
-	padding-left: 100px;
+	border-radius: 50%;
+	// padding-left: 100px;
 	/* background-color: red; */
 }
