--- a/layouts/partials/profile_resume.html
+++ b/layouts/partials/profile_resume.html
@@ -1,5 +1,5 @@
 {{/*  {{ if .Title }}  */}}
-  <hgroup>
+  <hgroup class="profile-resume">
     {{/*  TODO seguir  */}}
     {{/*  REFACTOR seguir  */}}
     {{/*  <h1>{{ .Title }}</h1>
