--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -5,6 +5,17 @@
 	--profile-scale: 1.1;
 }
 
+
+// h1.mi-header,
+// h2.mi-header,
+// h3.mi-header,
+// h4.mi-header,
+// h5.mi-header,
+// h6.mi-header {
+//   font-weight: normal;
+//   font-size: inherit;
+// }
+
 section.social-icons svg:hover {
 	color: var(--hover-color);
 }
