only 1 Dexter icon in header

--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,21 +10,29 @@
       {{/*  DEXTER SVG ICON  */}}
       {{/*  DELETE comments and not used dexter SVG's */}}
 
-      <svg id="dexterSVG" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+      {{/*  <svg id="dexterSVG" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
         <path d="M 4.62 1.54 C 4.62 4.62 4.62 4.62 6.0476 6.2986 L 3.08 7.7 L 6.16 9.24 L 3.08 10.78 L 6.16 12.32 C 4.62 15.4 3.08 18.48 3.08 23.1 L 15.4 23.1 C 10.78 18.48 12.32 13.86 13.86 12.32 L 16.94 10.78 L 13.86 9.24 L 16.94 7.7 L 14.4159 6.2539 C 15.4 4.62 13.86 3.08 13.86 1.54 L 12.32 4.62 C 12.32 4.62 10.2533 3.274 7.7 4.62 C 6.8792 3.0554 5.9151 2.3547 4.62 1.54 Z" />
-      </svg>
-      <svg id="dexterSVG" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+      </svg>  */}}
+
+      {{/*  <svg id="dexterSVG" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
         <path d="M 3.8091 1.9364 C 3.8091 5.8091 3.8091 5.8091 5.6041 7.9197 L 1.8727 9.6818 L 5.7455 11.6182 L 1.8727 13.5545 L 5.7455 15.4909 C 4.2869 17.6033 4.2869 20.1181 4.2869 22.6328 L 15.6033 22.6328 C 14.3459 20.1181 13.4909 17.4273 15.4273 15.4909 L 19.3 13.5545 L 15.4273 11.6182 L 19.3 9.6818 L 16.1263 7.8635 C 17.3636 5.8091 15.4273 3.8727 15.4273 1.9364 L 13.4909 5.8091 C 13.4909 5.8091 10.8923 4.1167 7.6818 5.8091 C 6.6498 3.8418 5.4375 2.9608 3.8091 1.9364 Z" />
-      </svg>
-      <svg id="dexterSVG" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+      </svg>  */}}
+
+      {{/*  <svg id="dexterSVG" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
         <path d="M 3.8091 1.9364 C 3.8091 5.8091 3.8091 5.8091 5.6041 7.9197 L 1.8727 9.6818 L 5.7455 11.6182 L 1.8727 13.5545 L 5.7455 15.4909 C 4.2869 17.6033 4.2869 20.1181 5 23 L 5 23 C -5 18 -3 8 1 4 C 9 -4 18 2 19.976 5.207 C 24.066 9.914 24 18 16 23 L 16 23 C 14.3459 20.1181 13.4909 17.4273 15.4273 15.4909 L 19.3 13.5545 L 15.4273 11.6182 L 19.3 9.6818 L 16.1263 7.8635 C 17.3636 5.8091 15.4273 3.8727 15.4273 1.9364 L 13.4909 5.8091 C 13.4909 5.8091 10.8923 4.1167 7.6818 5.8091 C 6.6498 3.8418 5.4375 2.9608 3.8091 1.9364 Z" />
-      </svg>
-      <svg id="dexterSVG" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+      </svg>  */}}
+      
+      {{/*  <svg id="dexterSVG" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+        <path d="M 6.6091 1.9364 C 6.6091 5.8091 6.6091 5.8091 8.4041 7.9197 L 4.6727 9.6818 L 8.5455 11.6182 L 4.6727 13.5545 L 8.5455 15.4909 C 7.0869 17.6033 7.0869 20.1181 7.8 23 L 7.8 23 C -2.2 18 -0.2 8 3.8 4 C 11.8 -4 20.8 2 22.776 5.207 C 26.866 9.914 26.8 18 18.8 23 L 18.8 23 C 17.1459 20.1181 16.2909 17.4273 18.2273 15.4909 L 22.1 13.5545 L 18.2273 11.6182 L 22.1 9.6818 L 18.9263 7.8635 C 20.1636 5.8091 18.2273 3.8727 18.2273 1.9364 L 16.2909 5.8091 C 16.2909 5.8091 13.6923 4.1167 10.4818 5.8091 C 9.4498 3.8418 8.2375 2.9608 6.6091 1.9364 Z" />
+      </svg>  */}}
+      <svg id="dexterSVG" width="30" height="30" fill="currentColor" viewBox="0 0 29 29" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
         <path d="M 6.6091 1.9364 C 6.6091 5.8091 6.6091 5.8091 8.4041 7.9197 L 4.6727 9.6818 L 8.5455 11.6182 L 4.6727 13.5545 L 8.5455 15.4909 C 7.0869 17.6033 7.0869 20.1181 7.8 23 L 7.8 23 C -2.2 18 -0.2 8 3.8 4 C 11.8 -4 20.8 2 22.776 5.207 C 26.866 9.914 26.8 18 18.8 23 L 18.8 23 C 17.1459 20.1181 16.2909 17.4273 18.2273 15.4909 L 22.1 13.5545 L 18.2273 11.6182 L 22.1 9.6818 L 18.9263 7.8635 C 20.1636 5.8091 18.2273 3.8727 18.2273 1.9364 L 16.2909 5.8091 C 16.2909 5.8091 13.6923 4.1167 10.4818 5.8091 C 9.4498 3.8418 8.2375 2.9608 6.6091 1.9364 Z" />
       </svg>
-      <svg id="dexterSVG" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+
+
+      {{/*  <svg id="dexterSVG" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
         <path d="M 5.9482 1.7428 C 5.9482 5.2282 5.9482 5.2282 7.5637 7.1277 L 4.2054 8.7136 L 7.691 10.4564 L 4.2054 12.1991 L 7.691 13.9418 C 6.3782 15.843 6.3782 18.1063 7.02 20.7 L 7.02 20.7 C -1.98 16.2 -0.18 7.2 3.42 3.6 C 10.62 -3.6 18.72 1.8 20.4984 4.6863 C 24.1794 8.9226 24.12 16.2 16.92 20.7 L 16.92 20.7 C 15.4313 18.1063 14.6618 15.6846 16.4046 13.9418 L 19.89 12.1991 L 16.4046 10.4564 L 19.89 8.7136 L 17.0337 7.0772 C 18.1472 5.2282 16.4046 3.4854 16.4046 1.7428 L 14.6618 5.2282 C 14.6618 5.2282 12.3231 3.705 9.4336 5.2282 C 8.5048 3.4576 7.4138 2.6647 5.9482 1.7428 Z" />
-      </svg>
+      </svg>  */}}
       {{/*  <svg id="dexterSVG" width="24" height="24" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
         <path d="M 5.9482 1.7428 C 5.9482 5.2282 5.9482 5.2282 7.5637 7.1277 L 4.2054 8.7136 L 7.691 10.4564 L 4.2054 12.1991 L 7.691 13.9418 C 6.3782 15.843 6.3782 18.1063 7.02 20.7 L 7.02 20.7 C -1.98 16.2 -0.18 7.2 3.42 3.6 C 10.62 -3.6 18.72 1.8 20.4984 4.6863 C 24.1794 8.9226 24.12 16.2 16.92 20.7 L 16.92 20.7 C 15.4313 18.1063 14.6618 15.6846 16.4046 13.9418 L 19.89 12.1991 L 16.4046 10.4564 L 19.89 8.7136 L 17.0337 7.0772 C 18.1472 5.2282 16.4046 3.4854 16.4046 1.7428 L 14.6618 5.2282 C 14.6618 5.2282 12.3231 3.705 9.4336 5.2282 C 8.5048 3.4576 7.4138 2.6647 5.9482 1.7428 Z"/>
       </svg>  */}}
