.webp and .gif fix in featured.html partial

--- a/layouts/partials/featured.html
+++ b/layouts/partials/featured.html
@@ -9,7 +9,13 @@
       {{ end }}
     {{ end }}
     {{ $featured := ($images.GetMatch (.Params.featured_image | default "*feature*")) | default (index $images $index) }}
-    {{ $thumbnail := $featured.Filter (slice images.AutoOrient (images.Process "fit 1600x1600")) }}
+
+    {{/*  WEBP & Gif fix  */}}
+    {{ $thumbnail := $featured }}
+    {{ if and (ne $featured.MediaType.SubType "gif") (ne $featured.MediaType.SubType "webp") }}
+      {{ $thumbnail := $featured.Filter (slice images.AutoOrient (images.Process "fit 1600x1600")) }}
+    {{ end }}
+
     {{ $color := index $thumbnail.Colors 0 | default "transparent" }}
     <section class="featured">
       <a class="featured-card" href="{{ .RelPermalink }}" style="background-color: {{ $color }}; background-image: url({{ $thumbnail.RelPermalink }})">
