--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -4,9 +4,11 @@
   {{ partial "profile_resume.html" . }}
   {{ partial "categories.html" }}
   {{ partial "featured.html" . }}
-  <section class="galleries">
-    {{ range where .Pages "Params.private" "ne" true }}
-      {{ partial "album-card.html" . }}
-    {{ end }}
-  </section>
+  {{/*  PREVIOUS/Original  */}}
+  {{/*  <section class="galleries">  */}}
+    {{/*  {{ range where .Pages "Params.private" "ne" true }}
+    {{ partial "album-card.html" . }}
+    {{ end }}  */}}
+    {{/*  </section>  */}}
+  {{ partial "show-featured-galleries.html" . }}
 {{ end }}
