renamed partial featured-galleries.html

--- a/layouts/_default/home.html
+++ b/layouts/_default/home.html
@@ -10,5 +10,5 @@
     {{ partial "album-card.html" . }}
     {{ end }}  */}}
     {{/*  </section>  */}}
-  {{ partial "show-featured-galleries.html" . }}
+  {{ partial "featured-galleries.html" . }}
 {{ end }}
