single (gallery) markdown content between <hgroup> to make headers work

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -7,14 +7,16 @@
 
   {{/*  Markdown content  */}}
   {{ with .Content }}
-  <section class="prose">
-    {{ . }}
-  </section>
+  <hgroup>
+    <section class="prose">
+      {{ . }}
+    </section>
+  </hgroup>
   {{ end }}
 
   {{ if .Params.show_text_on_top }}
     {{ partial "gallery.html" . }}
   {{ end }}
 
-  {{ partial "related.html" . }}
+    {{ partial "related.html" . }}
 {{ end }}
