more readable hr separator

--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -53,7 +53,8 @@ hr.full-separator{
 	// background: linear-gradient(90deg, transparent 0%, rgba(255, 0, 0, 0.479) 50%, transparent 100%);
 	// background: linear-gradient(90deg, transparent 0%, var(--hover-color) 50%, transparent 100%);
 	// background: linear-gradient(90deg, transparent 0%, #f0f0f025 50%, transparent 100%);
-	background: linear-gradient(90deg, transparent 0%, #f0f0f062 50%, transparent 100%);
+	// background: linear-gradient(90deg, transparent 0%, #f0f0f062 50%, transparent 100%);
+	background: linear-gradient(90deg, transparent 0%, #f0f0f062 20%, #f0f0f062 50%, #f0f0f062 80%, transparent 100%);
 	// background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(255,255,255,0.4) 45%, rgba(255,255,255,0.4) 55%, rgba(0,0,0,0) 100%);
 	// background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 0, 0, 1), rgba(0, 0, 0, 0));
 	height: 1px;
