--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -143,10 +143,14 @@ blockquote {
 	animation: scaleAnim2 0.1s ease 0s 1 alternate both;
 }
 
-nav.categories ul li a:hover {
-	color: var(--hover-color);
-	border: 1px solid var(--hover-color);
-	font-weight: bold;
+nav.categories ul li a{
+	border: 2px solid var(--border);
+	&:hover {
+		color: var(--hover-color);
+		border: 2px solid var(--hover-color);
+		// font-weight: bold;
+		text-decoration: underline;
+	}
 }
 
 .description-link {
