--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -210,3 +210,79 @@ nav.categories ul li a{
 // 		// font-weight: bold;
 // 	}
 // }
+
+
+/*#region hgroup.articles*/
+
+// hgroup.articles
+// hgroup.articles p, ul{
+hgroup.articles p, hgroup.articles ul{
+	// width: 100%;
+	// text-align: left;
+
+	text-align: left;
+	width: 100%;
+	text-wrap: wrap;
+    // margin: 0 auto;
+    // max-width: 800px; /* Adjust as needed */
+}
+
+// hgroup.articles ol, ul {
+hgroup.articles ol, hgroup.articles ul {
+  list-style-type: none;
+  margin: 0px;
+}
+
+hgroup.articles ol {
+	list-style-type: decimal;
+	margin: 0px;
+  }
+  
+hgroup.articles ul {
+	list-style-type: disc;
+	margin: 0px;
+}
+
+hgroup.articles img {
+// hgroup.articles p img{
+// img{
+	// border: #fe9234;
+
+	// width: 30px;
+	// align-items: center;
+	// background-color: pink;
+	// border-radius: 50%;
+	margin: auto;
+	// display: block;
+	// position: absolute;
+	// left: 0px;
+	// width: 50%;
+	// display: flex;
+	// justify-content: center;
+}
+
+// ul {
+//     list-style-type: disc;
+//     padding-left: 20px; /* Adjust indentation */
+// }
+
+hgroup.articles ul ul li{
+// ul li {
+    list-style-type: circle; /* Different style for nested lists */
+	margin-left: 20px;
+    // padding-left: 20px; /* Further indentation */
+}
+
+hgroup.articles ul ul ul li{
+// ul ul li {
+    list-style-type: square; /* Further differentiation */
+    // padding-left: 20px;
+    margin-left: 20px;
+}
+hgroup.articles ul ul ul ul li{
+// ul ul li {
+    list-style-type: square; /* Further differentiation */
+    // padding-left: 20px;
+    margin-left: 20px;
+}
+/*#endregion hgroup.articles*/
