refactor articles-content

--- a/layouts/articles/single.html
+++ b/layouts/articles/single.html
@@ -16,8 +16,8 @@
 
   {{/*  Markdown content  */}}
   {{ with .Content }}
-  <hgroup class="articles">
-    {{/*  <section class="articles">  */}}
+  <hgroup class="articles-content">
+    {{/*  <section class="articles-content">  */}}
       {{/*  <section class="prose">  */}}
         {{ . }}
       {{/*  </section>  */}}
