--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -212,7 +212,7 @@ nav.categories ul li a{
 // }
 
 
-/*#region hgroup.articles*/
+/*#region hgroup.articles-content*/
 
 .articles-index{
 	color: var(--text-2);
@@ -254,9 +254,9 @@ nav.categories ul li a{
 // 	// left: -5px;
 //   }
 
-// hgroup.articles
-// hgroup.articles p, ul{
-hgroup.articles p, hgroup.articles ul{
+// hgroup.articles-content
+// hgroup.articles-content p, ul{
+hgroup.articles-content p, hgroup.articles-content ul{
 	// width: 100%;
 	// text-align: left;
 
@@ -267,24 +267,24 @@ hgroup.articles p, hgroup.articles ul{
     // max-width: 800px; /* Adjust as needed */
 }
 
-// hgroup.articles ol, ul {
-hgroup.articles ol, hgroup.articles ul {
+// hgroup.articles-content ol, ul {
+hgroup.articles-content ol, hgroup.articles-content ul {
   list-style-type: none;
   margin: 0px;
 }
 
-hgroup.articles ol {
+hgroup.articles-content ol {
 	list-style-type: decimal;
 	margin: 0px;
   }
   
-hgroup.articles ul {
+hgroup.articles-content ul {
 	list-style-type: disc;
 	margin: 0px;
 }
 
-hgroup.articles img {
-// hgroup.articles p img{
+hgroup.articles-content img {
+// hgroup.articles-content p img{
 // img{
 	// border: #fe9234;
 
@@ -306,23 +306,23 @@ hgroup.articles img {
 //     padding-left: 20px; /* Adjust indentation */
 // }
 
-hgroup.articles ul ul li{
+hgroup.articles-content ul ul li{
 // ul li {
     list-style-type: circle; /* Different style for nested lists */
 	margin-left: 20px;
     // padding-left: 20px; /* Further indentation */
 }
 
-hgroup.articles ul ul ul li{
+hgroup.articles-content ul ul ul li{
 // ul ul li {
     list-style-type: square; /* Further differentiation */
     // padding-left: 20px;
     margin-left: 20px;
 }
-hgroup.articles ul ul ul ul li{
+hgroup.articles-content ul ul ul ul li{
 // ul ul li {
     list-style-type: square; /* Further differentiation */
     // padding-left: 20px;
     margin-left: 20px;
 }
-/*#endregion hgroup.articles*/
+/*#endregion hgroup.articles-content*/
