--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -3,6 +3,17 @@
 	/* --hover-color: {{ .Site.Params.colors.hover }}; */
 	--hover-color: #fe9234;
 	--profile-scale: 1.1;
+	--separator-color-light: #000000b4;
+	--separator-color-dark: #f0f0f062;
+	--separator-color: var(--separator-color-light)
+
+}
+
+@media (prefers-color-scheme: dark) {
+	:root {
+		--separator-color: var(--separator-color-dark)
+	  }
+}
 }
 
 /*#region fixed header and menu*/
@@ -62,52 +73,75 @@
 		// 	height: 1.5em;
 		// 	background: radial-gradient(ellipse at top, rgba(0,0,0,0.06) 0%,rgba(0,0,0,0) 70%);
 		//   }
-@media (prefers-color-scheme: dark) {
+
+
+
+
+
+// @media (prefers-color-scheme: dark) {
+// 	hr.full-separator{
+// 		position: absolute;
+// 		width: auto;
+// 		// left: 0;
+// 		// right: 0;
+// 		left: 2.5%; /* Adjusted from left: 0 to center */
+// 		right: 2.5%; /* Adjusted from right: 0 to center */
+
+// 		border-bottom: 1px solid rgba(0,0,0,.08);
+// 		margin: 2.5em 0;
+// 		// margin-top: -100px;
+// 		// margin-top: -10px;
+// 		// margin-bottom: -10px;
+// 		// width: 95%;
+// 		// display: block;
+// 		// background: linear-gradient(to right, red, yellow);
+// 		// background: linear-gradient(to right, rgba(0, 0, 0, 0), white, rgba(255, 0, 0, 0));
+// 		// background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(255, 255, 255, 0.479) 50%, rgba(0,0,0,0) 100%);
+// 		// background: linear-gradient(90deg, transparent 0%, rgba(255, 0, 0, 0.479) 50%, transparent 100%);
+// 		// background: linear-gradient(90deg, transparent 0%, var(--hover-color) 50%, transparent 100%);
+// 		// background: linear-gradient(90deg, transparent 0%, #f0f0f025 50%, transparent 100%);
+// 		// background: linear-gradient(90deg, transparent 0%, #f0f0f062 50%, transparent 100%);
+// 		background: linear-gradient(90deg, transparent 0%, #f0f0f062 20%, #f0f0f062 50%, #f0f0f062 80%, transparent 100%);
+// 		// background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(255,255,255,0.4) 45%, rgba(255,255,255,0.4) 55%, rgba(0,0,0,0) 100%);
+// 		// background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 0, 0, 1), rgba(0, 0, 0, 0));
+// 		height: 2px;
+// 		border: 0;
+
+// 	}
+// }
+
+// @media (prefers-color-scheme: light) {
+// 	hr.full-separator{
+// 		position: absolute;
+// 		width: auto;
+// 		left: 2.5%; /* Adjusted from left: 0 to center */
+// 		right: 2.5%; /* Adjusted from right: 0 to center */
+
+// 		border-bottom: 1px solid rgba(0,0,0,.08);
+// 		margin: 2.5em 0;
+// 		background: linear-gradient(90deg, transparent 0%, #000000b4 20%, #000000b4 50%, #000000b4 80%, transparent 100%);
+// 		height: 1px;
+// 		border: 0;
+// 	}
+// }
+
+
+
 	hr.full-separator{
 		position: absolute;
 		width: auto;
-		// left: 0;
-		// right: 0;
 		left: 2.5%; /* Adjusted from left: 0 to center */
 		right: 2.5%; /* Adjusted from right: 0 to center */
 
 		border-bottom: 1px solid rgba(0,0,0,.08);
 		margin: 2.5em 0;
-		// margin-top: -100px;
-		// margin-top: -10px;
-		// margin-bottom: -10px;
-		// width: 95%;
-		// display: block;
-		// background: linear-gradient(to right, red, yellow);
-		// background: linear-gradient(to right, rgba(0, 0, 0, 0), white, rgba(255, 0, 0, 0));
-		// background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(255, 255, 255, 0.479) 50%, rgba(0,0,0,0) 100%);
-		// background: linear-gradient(90deg, transparent 0%, rgba(255, 0, 0, 0.479) 50%, transparent 100%);
-		// background: linear-gradient(90deg, transparent 0%, var(--hover-color) 50%, transparent 100%);
-		// background: linear-gradient(90deg, transparent 0%, #f0f0f025 50%, transparent 100%);
-		// background: linear-gradient(90deg, transparent 0%, #f0f0f062 50%, transparent 100%);
-		background: linear-gradient(90deg, transparent 0%, #f0f0f062 20%, #f0f0f062 50%, #f0f0f062 80%, transparent 100%);
-		// background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(255,255,255,0.4) 45%, rgba(255,255,255,0.4) 55%, rgba(0,0,0,0) 100%);
-		// background: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 0, 0, 1), rgba(0, 0, 0, 0));
-		height: 2px;
-		border: 0;
-
-	}
-}
-
-@media (prefers-color-scheme: light) {
-	hr.full-separator{
-		position: absolute;
-		width: auto;
-		left: 2.5%; /* Adjusted from left: 0 to center */
-		right: 2.5%; /* Adjusted from right: 0 to center */
-
-		border-bottom: 1px solid rgba(0,0,0,.08);
-		margin: 2.5em 0;
-		background: linear-gradient(90deg, transparent 0%, #000000b4 20%, #000000b4 50%, #000000b4 80%, transparent 100%);
+	background: linear-gradient(90deg, transparent 0%, var(--separator-color) 20%, var(--separator-color) 50%, var(--separator-color) 80%, transparent 100%);
+	// --gradient-color: var(--separator-color);
+	// background: linear-gradient(90deg, transparent 0%, var(--gradient-color) 20%, var(--gradient-color) 50%, var(--gradient-color) 80%, transparent 100%);
 		height: 1px;
 		border: 0;
 	}
-}
+
 
 .selected-breadcrumb {
 	// color: #fd0000;
